center logo shift nav items right need to fix the active state on scroll

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -177,17 +177,61 @@ header a {
     }
 }
 
-.navbar-header > .custom-brand {
+
+/*.navbar-header > .custom-brand {
     padding: 0 0;
 }
 
 .custom-brand > .brand-image{
     margin-top: -5px;
-}
+}*/
 
 @media(min-width:768px) {
+    #link-navbar{
+        float:right;
+        margin-right:-60px;
+    }
+
+    .logo, .logo-shadow:after {
+        display: block;
+        position: absolute;
+        width: 160px;
+        height: 160px;
+        background-color: #{{ site.color.secondary}};
+        border-radius: 50%;
+        transform: translateX(-50%);
+        transition: .3s;
+        -webkit-transition: .3s;
+        left: 50%;
+        top: -10px;
+        z-index:3;
+    }
+
+    .logo-shadow:after{ 
+        box-shadow: 0 2px 1px rgba(0,0,0,0.2);
+    }
+
+    .logo.logo-shrink {
+        top: -40px;    
+    }
+
+    .logo img {
+        max-width: 100%;
+        width: 80;
+        height: 80;
+        position: relative;
+        display: block;
+        z-index: 10;
+        top: 70px;
+        -webkit-transition: .3s;
+        transition: .3s;
+
+    }
+
     .navbar-fixed-top {
+
         padding: 20px 0;
+        box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2);
         -webkit-transition: padding .3s;
         -moz-transition: padding .3s;
         transition: padding .3s;
@@ -213,7 +257,7 @@ header a {
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
-    overflow: hidden;
+    overflow: visible;
 }
 
 .navbar a:focus {
@@ -470,7 +514,7 @@ footer a{
 }
 
 .scroll-top {
-    z-index: 1049;
+    z-index: 3;
     position: fixed;
     right: 2%;
     bottom: 2%;
@@ -529,7 +573,7 @@ footer a{
 }
 
 .portfolio-modal .close-modal .lr {
-    z-index: 1051;
+    z-index: 4;
     width: 1px;
     height: 75px;
     margin-left: 35px;
@@ -540,7 +584,7 @@ footer a{
 }
 
 .portfolio-modal .close-modal .lr .rl {
-    z-index: 1052;
+    z-index: 5;
     width: 1px;
     height: 75px;
     background-color: #{{ site.color.secondary }};
